# MegaAutoKG

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
apps/car/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/car/migrations/: 0001_initial.py  0002_initial.py  0003_alter_car_options_alter_carbrand_options_and_more.py  0004_alter_car_options_alter_carbrand_options_and_more.py  0005_alter_car_year_publication.py
apps/payment/: admin.py  apps.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
apps/payment/migrations/: 0001_initial.py  0002_initial.py  0003_alter_booking_options_alter_payment_options_and_more.py  0004_booking_status_booking_updated_at_and_more.py  0005_alter_booking_updated_at.py
apps/user/: models.py  serializers.py  tasks.py  urls.py  views.py
apps/user/migrations/: 0001_initial.py  0002_alter_customuser_options_customuser_full_name_and_more.py
core/: settings.py  urls.py
generics/: models.py  utils.py
